force-app/main/default/objects/Product2/fields/BTW__c.field-meta.xml
<CustomField>
    <fullName>BTW__c</fullName>
    <label>BTW %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21</fullName>
                <default>true</default>
                <label>21</label>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>