force-app/main/default/objects/Product2/fields/Prijsmodel__c.field-meta.xml
<CustomField>
    <fullName>Prijsmodel__c</fullName>
    <label>Prijsmodel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per m²</fullName>
            </value>
            <value>
                <fullName>Per stuk</fullName>
            </value>
            <value>
                <fullName>Per zitplaats</fullName>
            </value>
            <value>
                <fullName>Per uur</fullName>
            </value>
            <value>
                <fullName>Vast bedrag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>