force-app/main/default/objects/Product2/fields/Prijstype__c.field-meta.xml
<CustomField>
    <fullName>Prijstype__c</fullName>
    <description>Verschillende prijstypes bepalen hoe producten berekend worden.</description>
    <label>Prijstype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normaal</fullName>
            </value>
            <value>
                <fullName>Staffel Cumulatief</fullName>
            </value>
            <value>
                <fullName>Staffel Per Trede</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>