force-app/main/default/objects/Product2/fields/Primaryproduct__c.field-meta.xml
<CustomField>
    <fullName>Primaryproduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Product</label>
    <type>Checkbox</type>
</CustomField>