force-app/main/default/objects/Product2/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Used for linking product and service areas</description>
    <label>Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>