force-app/main/default/objects/Product2/fields/Selectie_Producttype__c.field-meta.xml
<CustomField>
    <fullName>Selectie_Producttype__c</fullName>
    <label>Selectie Producttype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primair</fullName>
            </value>
            <value>
                <fullName>Pakket</fullName>
            </value>
            <value>
                <fullName>Optie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>