force-app/main/default/objects/Product2/fields/Standard_Price_Book_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price_Book_Entry_Id__c</fullName>
    <description>Filled for flow reasons to create a product</description>
    <label>Standard Price Book Entry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>