force-app/main/default/objects/Product2/listViews/Reiniging_Buiten.listView-meta.xml
<ListView>
    <fullName>Reiniging_Buiten</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Reiniging - Buiten</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Reiniging - Buiten</label>
</ListView>