force-app/main/default/objects/Product2/listViews/Schoonhuisshop_nl.listView-meta.xml
<ListView>
    <fullName>Schoonhuisshop_nl</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Schoonhuisshop.nl</value>
    </filters>
    <label>Schoonhuisshop.nl</label>
</ListView>