force-app/main/default/objects/Product2/listViews/Tapijt_Meubelreiniging.listView-meta.xml
<ListView>
    <fullName>Tapijt_Meubelreiniging</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>Algemeen,Tapijt- en Meubelreiniging</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tapijt- &amp; Meubelreiniging</label>
</ListView>