force-app/main/default/objects/Product2/listViews/Wasserij.listView-meta.xml
<ListView>
    <fullName>Wasserij</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>Wasserij,Algemeen</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Wasserij</label>
</ListView>